--- a/home.html
+++ b/home.html
@@ -52,9 +52,15 @@
             onclick="
                     getId('1');
                 "></a>
-        <a><img src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/7qLAJHooHY4F7rH31bkhhK/891a61f6f3293eb5aa3222c2fc5dc5b7/POP_2_SHADOW_1993.jpg" width="190px" class="carta main-image" data-related="related2"=""></a>
-        <a><img src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/3LdYKVvXmHwqMtGOGEs3CV/2c62a1d2a857bae2dd7d142a9e19e184/POP_3D_1999.jpg" width="190px" class="carta main-image" data-related="related3"></a>
-        <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/6cIAwEUBhhOMeOD8GwcMUi/9579037a9937945dfc0e21b7704cebcb/POP_SANDS_2003.jpg" width="190px" data-related="related4"></a>
+        <a><img src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/7qLAJHooHY4F7rH31bkhhK/891a61f6f3293eb5aa3222c2fc5dc5b7/POP_2_SHADOW_1993.jpg" width="190px" class="carta main-image" data-related="related2"="" onclick="
+            getId('2');
+        "></a>
+        <a><img src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/3LdYKVvXmHwqMtGOGEs3CV/2c62a1d2a857bae2dd7d142a9e19e184/POP_3D_1999.jpg" width="190px" class="carta main-image" data-related="related3" onclick="
+            getId('3');
+        "></a>
+        <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/6cIAwEUBhhOMeOD8GwcMUi/9579037a9937945dfc0e21b7704cebcb/POP_SANDS_2003.jpg" width="190px" data-related="related4" onclick="
+            getId('4');
+        "></a>
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/CLfYOp3hMfUlaH7L7FW7w/cc9e4b55a1e86a1cbc75e236c98e6e7d/POP_WARRIOR_2004.jpg" width="190px" data-related="related5"></a>
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/4l90fQjWXFAW9eeXoz6Fn1/0a5176eaa0a304c4a60e4162dc6ae8b1/POP_TWOTHRONES_2005.jpg" width="190px" data-related="related6"></a>
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/6u8aOOUnZcHKKgJSyzq78I/cbae706757f7b6c56b93d4528c1b98dc/POP_BATTLES_2005.jpg" width="190px" data-related="related7"></a>
