--- a/home.html
+++ b/home.html
@@ -64,7 +64,9 @@
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/CLfYOp3hMfUlaH7L7FW7w/cc9e4b55a1e86a1cbc75e236c98e6e7d/POP_WARRIOR_2004.jpg" width="190px" data-related="related5" onclick="
             getId('5');
         "></a>
-        <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/4l90fQjWXFAW9eeXoz6Fn1/0a5176eaa0a304c4a60e4162dc6ae8b1/POP_TWOTHRONES_2005.jpg" width="190px" data-related="related6"></a>
+        <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/4l90fQjWXFAW9eeXoz6Fn1/0a5176eaa0a304c4a60e4162dc6ae8b1/POP_TWOTHRONES_2005.jpg" width="190px" data-related="related6" onclick="
+            getId('6');
+        "></a>
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/6u8aOOUnZcHKKgJSyzq78I/cbae706757f7b6c56b93d4528c1b98dc/POP_BATTLES_2005.jpg" width="190px" data-related="related7"></a>
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/2d74QOC5JLtl28QnrCzISg/a5301e6eabcb1819bf1f365436368329/POP_CLASSIC_2007.jpg" width="190px" data-related="related8"></a>
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/4QHHJfANlHX12CKRApJLiU/9c6a5a979c6c038452a24ea85376ef99/POP_2008.jpg" width="190px" data-related="related9"></a>
