--- a/home.html
+++ b/home.html
@@ -67,7 +67,9 @@
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/4l90fQjWXFAW9eeXoz6Fn1/0a5176eaa0a304c4a60e4162dc6ae8b1/POP_TWOTHRONES_2005.jpg" width="190px" data-related="related6" onclick="
             getId('6');
         "></a>
-        <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/6u8aOOUnZcHKKgJSyzq78I/cbae706757f7b6c56b93d4528c1b98dc/POP_BATTLES_2005.jpg" width="190px" data-related="related7"></a>
+        <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/6u8aOOUnZcHKKgJSyzq78I/cbae706757f7b6c56b93d4528c1b98dc/POP_BATTLES_2005.jpg" width="190px" data-related="related7" onclick="
+            getId('7');
+        "></a>
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/2d74QOC5JLtl28QnrCzISg/a5301e6eabcb1819bf1f365436368329/POP_CLASSIC_2007.jpg" width="190px" data-related="related8"></a>
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/4QHHJfANlHX12CKRApJLiU/9c6a5a979c6c038452a24ea85376ef99/POP_2008.jpg" width="190px" data-related="related9"></a>
         <a><img class="carta main-image" src="https://staticctf.ubisoft.com/J3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn/7ieSZPETo4F9EvQRWsiivu/16931817cda37d5c5fc0f2e8934c3c55/POP_FALLENKING_2008.jpg" width="190px" data-related="related10"></a>
